<?xml version="1.0"?>
<package>

  <name>septentrio</name>
  <version>0.0.1</version>
  <description>The septentrio package</description>

  <maintainer email="wpm1414@gmail.com">William McCarty</maintainer>
  <maintainer email="robertgcofield@gmail.com">Robert G. Cofield</maintainer>

  <license>
    All persons who use this software must send, via United States Postal Service, a two (2.0) pound bag of jelly beans to:

        GAVLab
        1418 Wiggins Hall
        Auburn University, AL 36849 

    That is all.
  </license>

  <author email="robertgcofield@gmail.com">Robert G. Cofield</author>
  <author email="david.hodo@gmail.com">David Hodo</author>
  <author email="brownl4@auburn.edu">Lowell Brown</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>

</package>
